; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_node_metadata.c_NodeIsReadable.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_node_metadata.c_NodeIsReadable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ReadFromSecondaries = common dso_local global i64 0, align 8
@USE_SECONDARY_NODES_NEVER = common dso_local global i64 0, align 8
@USE_SECONDARY_NODES_ALWAYS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @NodeIsReadable(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i64, i64* @ReadFromSecondaries, align 8
  %5 = load i64, i64* @USE_SECONDARY_NODES_NEVER, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load i32*, i32** %3, align 8
  %9 = call i64 @NodeIsPrimary(i32* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %7
  store i32 1, i32* %2, align 4
  br label %22

12:                                               ; preds = %7, %1
  %13 = load i64, i64* @ReadFromSecondaries, align 8
  %14 = load i64, i64* @USE_SECONDARY_NODES_ALWAYS, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %21

16:                                               ; preds = %12
  %17 = load i32*, i32** %3, align 8
  %18 = call i64 @NodeIsSecondary(i32* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %16
  store i32 1, i32* %2, align 4
  br label %22

21:                                               ; preds = %16, %12
  store i32 0, i32* %2, align 4
  br label %22

22:                                               ; preds = %21, %20, %11
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i64 @NodeIsPrimary(i32*) #1

declare dso_local i64 @NodeIsSecondary(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
